header section updated

--- a/index.html
+++ b/index.html
@@ -4,16 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flowers responsive</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+
 </head>
 <body>
     <header>
+        <nav class="navber">
+        <div class="nav-logo">
+          <img src="assets/logo.png" alt="" />
+        </div>
+
+        <div class="nav-item-section">
+          <a href="#" class="nav-item item-color-1 hight">Home</a>
+          <a href="#" class="nav-item item-color-2 hight">Shop</a>
+          <a href="#" class="nav-item item-color-2 hight">about us</a>
+          <a href="#" class="nav-item item-color-3"><i class="fa-solid fa-cart-shopping"></i><span>Cart ($56)</span>
+          </a>
+        </div>
+      </nav>
+      <div class="banner-section">
+        <div class="banner-content">
+          <h3 class="banner-title">
+            ALWAYS
+            <span class="orenge-color"
+              >FRESH <br />
+              FLOWERS</span
+            >
+          </h3>
+          <p class="banner-discription black-color-50">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <img src="assets/hero-flower.png" alt="Hero Flower" />
+      </div>
+
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
