--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </nav>
       <div class="banner-section">
         <div class="banner-content">
-          <h3 class="banner-title">
+          <h3 class="banner-title noto-serif">
             ALWAYS
-            <span class="orenge-color"
+            <span class="orenge-color noto-serif"
               >FRESH <br />
               FLOWERS</span
             >
@@ -45,6 +45,19 @@
 
     </header>
     <main>
+        <!-- our plants section -->
+      <section class="our-plants">
+        <div class="plant-content">
+          <h3 class="plant-title">
+            <span class="orenge-color">Our</span> Plants
+          </h3>
+          <p class="plant-description black-color-50">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
+          </p>
+        </div>
+
 
     </main>
     <footer>
