Updated main section in index.html file

--- a/index.html
+++ b/index.html
@@ -57,6 +57,93 @@
             classic roses to exotic blooms, we offer a wide variety of fresh.
           </p>
         </div>
+        <!-- cart section -->
+
+        <div class="plant-cart">
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="plant-cart-container">
+            <div class="cart">
+              <img src="assets/sample-flower-image.png" alt="Flower Image" />
+              <div class="cart-description">
+                <h4 class="cart-title">Lily Blossom</h4>
+                <h3 class="cart-price">20 USD</h3>
+              </div>
+              <button class="praimary-btn">ADD TO CART</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
 
     </main>
