Update index.html file and styles.css file

--- a/index.html
+++ b/index.html
@@ -143,6 +143,35 @@
         </div>
       </section>
 
+      <!-- Flower & Plants Lover section -->
+      <section class="flower-plant-lover">
+        <div class="flower-plant-lover-img">
+          <img src="assets/flower-store.png" alt="Flower Store Image" />
+        </div>
+
+        <div class="flower-plant-lover-content">
+          <h3 class="relative-title">Flower & Plants Lover</h3>
+          <ul>
+            <li class="flower-plant-lover-list black-color-50">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li class="flower-plant-lover-list black-color-50">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li class="flower-plant-lover-list black-color-50">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+
 
 
 
