--- a/index.html
+++ b/index.html
@@ -170,6 +170,55 @@
           </ul>
         </div>
       </section>
+      <!-- Latest  Deals section -->
+      <section class="latest-deals-section">
+        <div class="latest-deals-section-content">
+          <h3 class="relative-title">
+            <span class="orenge-color">Latest</span> Deals
+          </h3>
+          <p class="black-color-50">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
+          </p>
+        </div>
+        <div class="latest-deal-cart-container">
+          <div class="latest-deals-laft-side card">
+            <div class="card1">
+              <div class="latest-deals-cart-content">
+                <h3 class="latest-deal-card-title-first noto-serif">
+                  60% Off | Bloom Plant
+                </h3>
+                <button class="btn-latest">
+                  <a class="latest-deal-shop-1" href="#">Shop Now</a>
+                </button>
+              </div>
+            </div>
+            <div class="card2">
+              <div class="latest-deals-cart-content">
+                <h3 class="latest-deal-card-title-first noto-serif">
+                  30% Off | Ana Plant
+                </h3>
+                <button class="btn-latest">
+                  <a class="latest-deal-shop-1" href="#">Shop Now</a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card3">
+            <div class="latest-deals-cart-content">
+              <h3 class="latest-deal-card-title-secont noto-serif">
+                25% Off | Zabo Plant
+              </h3>
+              <button class="btn-latest">
+                <a class="latest-deal-shop-2" href="#">Shop Now</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
 
 
