Update footer section

--- a/index.html
+++ b/index.html
@@ -218,15 +218,60 @@
         </div>
       </section>
 
-
-
-
-
-
-
+      <!-- subscribe section -->
+      <section>
+        <div class="subscribe-conten">
+          <div class="subscribe-img">
+            <div class="subscribe-form">
+              <h3 class="subscribe-title">Join the colorful Bunch</h3>
+              <form class="subscribe-form-section" action="">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Write email"
+                />
+                <button class="sub secount-btn">subscribe</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
+        <section class="footer-section">
+        <div class="footer-title">
+          <img src="assets/logo.png" alt="Website logo" />
+          <p class="footer-title-description black-color-50">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
 
+        <div class="footer-home-section">
+          <a href="#" class="footer-home">Home</a><br />
+          <a href="#" class="footer-home">About Us</a><br />
+          <a href="#" class="footer-home">Blog</a><br />
+          <a href="#" class="footer-home">FAQ</a><br />
+          <a href="#" class="footer-home">Conract Us</a><br />
+        </div>
+
+        <div class="footer-features">
+          <a href="#" class="footer-home">Features</a><br />
+          <a href="#" class="footer-home">Pricing</a><br />
+          <a href="#" class="footer-home">Privacy</a><br />
+          <a href="#" class="footer-home">Terms of Service</a><br />
+          <a href="#" class="footer-home">Help Center</a><br />
+        </div>
+
+        <div class="footer-logo">
+          <a href="#"><img src="assets/icon-linkedin.png" alt="Linkedin" /></a>
+          <a href="#"
+            ><img src="assets/icon-twitter.png" alt="icon-twitter" /></a
+          ><a href="#"><img src="assets/icon-facebook.png" alt="Fecebook" /></a
+          ><a href="#"><img src="assets/icon-youtube.png" alt="Youtube" /></a>
+        </div>
+      </section>
     </footer>
 </body>
 </html>
