--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
           <a href="#" class="nav-item item-color-1 hight">Home</a>
           <a href="#" class="nav-item item-color-2 hight">Shop</a>
           <a href="#" class="nav-item item-color-2 hight">about us</a>
-          <a href="#" class="nav-item item-color-3"><i class="fa-solid fa-cart-shopping"></i><span>Cart ($56)</span>
-          </a>
+          <a href="#" class="nav-item item-color-3"><i class="fa-solid fa-cart-flatbed"></i>Cart ($56)</a>
         </div>
       </nav>
       <div class="banner-section">
