--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flowers responsive</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
     
 
 </head>
@@ -20,7 +23,7 @@
           <a href="#" class="nav-item item-color-1 hight">Home</a>
           <a href="#" class="nav-item item-color-2 hight">Shop</a>
           <a href="#" class="nav-item item-color-2 hight">about us</a>
-          <a href="#" class="nav-item item-color-3"><i class="fa-solid fa-cart-flatbed"></i>Cart ($56)</a>
+          <a href="#" class="nav-item item-color-3"><i class="fas fa-shopping-cart"></i>Cart ($56)</a>
         </div>
       </nav>
       <div class="banner-section">
